--- a/cmd/webserver/templates/badges.gohtml
+++ b/cmd/webserver/templates/badges.gohtml
@@ -19,6 +19,9 @@
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#event" role="tab">Event Badges</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#game" role="tab">Game Badges</a>
+                    </li>
                 </ul>
 
             </div>
@@ -40,12 +43,12 @@
                                 </thead>
                                 <tbody>
                                 {{ range $key, $value := .Badges }}
-                                    {{ if eq .Badge.AppID 0 }}
-                                        <tr data-link="{{ .Badge.GetPath }}" data-badge-id="{{ .Badge.GetUniqueID }}">
-                                            <td class="img" nowrap="nowrap" data-sort="{{ .Badge.BadgeID }}">
+                                    {{ if .IsSpecial }}
+                                        <tr data-link="{{ .GetPath false }}" data-badge-id="{{ .ID }}">
+                                            <td class="img" nowrap="nowrap" data-sort="{{ .ID }}">
                                                 <div class="icon-name">
-                                                    <div class="icon"><img src="{{ .Badge.GetIcon }}" alt="{{ .Badge.BadgeName }}"></div>
-                                                    <div class="name">{{ .Badge.BadgeName }}</div>
+                                                    <div class="icon"><img src="{{ .GetIcon }}" alt="{{ .AppName }}"></div>
+                                                    <div class="name">{{ .AppName }}</div>
                                                 </div>
                                             </td>
                                             <td>{{ comma64 .PlayersCount }}</td>
@@ -76,19 +79,63 @@
                                 </thead>
                                 <tbody>
                                 {{ range $key, $value := .Badges }}
-                                    {{ if ne .Badge.AppID 0 }}
-                                        <tr data-link="{{ .Badge.GetPath }}" data-badge-id="{{ .Badge.GetUniqueID }}">
-                                            <td class="img" nowrap="nowrap" data-sort="{{ .Badge.AppID }}">
+                                    {{ if .IsEvent }}
+                                        <tr data-link="{{ .GetPath false }}" data-badge-id="{{ .ID }}">
+                                            <td class="img" nowrap="nowrap" data-sort="{{ .ID }}">
                                                 <div class="icon-name">
-                                                    <div class="icon"><img src="{{ .Badge.GetIcon }}" alt="{{ .Badge.BadgeName }}"></div>
-                                                    <div class="name">{{ .Badge.BadgeName }}</div>
+                                                    <div class="icon"><img src="{{ .GetIcon }}" alt="{{ .AppName }}"></div>
+                                                    <div class="name">{{ .AppName }}</div>
                                                 </div>
                                             </td>
                                             <td>{{ comma64 .PlayersCount }}</td>
                                             <td>{{ comma .MaxLevel }}</td>
-                                            <td>{{ .GetAppLeader true }}</td>
-                                            <td><a href="{{ .Badge.GetPath }}?foil=1">{{ comma .MaxLevelFoil }}</a></td>
                                             <td>{{ .GetAppLeader false }}</td>
+                                            <td><a href="{{ .GetPath true }}?foil=1">{{ comma .MaxLevelFoil }}</a></td>
+                                            <td>{{ .GetAppLeader true }}</td>
+                                        </tr>
+                                    {{ end }}
+                                {{ end }}
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div class="jumbotron bottom mt-3">
+                            <h1><i class="fas fa-info"></i></h1>
+                            <div><strong>What are Foil Trading Cards?</strong>
+                                There is a small chance whenever you get a Trading Card from playing a game that it will have a special foil border.
+                                You'll need to collect a set of foil cards in order to craft them into a foil badge.
+                                There is no extra benefit to having foil cards or foil badges aside from their rarity.
+                            </div>
+                        </div>
+
+                    </div>
+
+                    {{/* Game Badges */}}
+                    <div class="tab-pane" id="game" role="tabpanel">
+
+                        <div class="table-responsive mb-4">
+                            <table class="table table-hover table-striped table-datatable" data-order='[[1, "desc"]]'>
+                                <thead class="thead-light">
+                                <tr>
+                                    <th scope="row">Badge (in date order)</th>
+                                    <th scope="row">Players</th>
+                                    <th scope="row">Leader</th>
+                                    <th scope="row">Foil Leader</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {{ range $key, $value := .Badges }}
+                                    {{ if .IsGame }}
+                                        <tr data-link="{{ .GetPath false }}" data-badge-id="{{ .ID }}">
+                                            <td class="img" nowrap="nowrap" data-sort="{{ .ID }}">
+                                                <div class="icon-name">
+                                                    <div class="icon"><img src="{{ .GetIcon }}" alt="{{ .AppName }}"></div>
+                                                    <div class="name">{{ .AppName }}</div>
+                                                </div>
+                                            </td>
+                                            <td>{{ comma64 .PlayersCount }}</td>
+                                            <td>{{ .GetAppLeader false }}</td>
+                                            <td>{{ .GetAppLeader true }}</td>
                                         </tr>
                                     {{ end }}
                                 {{ end }}
