Improve groups filter

--- a/cmd/webserver/templates/groups.gohtml
+++ b/cmd/webserver/templates/groups.gohtml
@@ -26,8 +26,9 @@
                         <div class="form-group">
                             <label for="filter">Filter Removed</label>
                             <select class="form-control form-control-chosen" id="filter" name="filter">
-                                <option value="0">All Groups</option>
+                                <option value="">All Groups</option>
                                 <option value="1">Active Groups</option>
+                                <option value="0">Removed Groups</option>
                             </select>
                         </div>
                     </div>
