--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -138,17 +138,17 @@
 
                     <li class="nav-item dropdown {{if .IsAppsPage }}active{{end}}">
                         <a class="nav-link dropdown-toggle d-lg-none" href="#" data-toggle="dropdown">Games</a>
-                        <a class="nav-link dropdown-toggle d-none d-lg-block" href="/apps" data-toggle="dropdown">Games</a>
+                        <a class="nav-link dropdown-toggle d-none d-lg-block" href="/games" data-toggle="dropdown">Games</a>
                         <div class="dropdown-menu">
 
-                            <a class="dropdown-item" href="/apps">Games</a>
+                            <a class="dropdown-item" href="/games">Games</a>
                             <a class="dropdown-item" href="/upcoming">Upcoming</a>
                             <a class="dropdown-item" href="/sales">On Sale</a>
                             <a class="dropdown-item" href="/new-releases">New Releases</a>
-                            {{/*<a class="dropdown-item" href="/apps/trending">Trending</a>*/}}
-                            <a class="dropdown-item" href="/apps/achievements">Most Achievements</a>
+                            {{/*<a class="dropdown-item" href="/games/trending">Trending</a>*/}}
+                            <a class="dropdown-item" href="/games/achievements">Most Achievements</a>
                             <a class="dropdown-item" href="/wishlists">Most Wishlists</a>
-                            <a class="dropdown-item" href="/apps/random">Random Game</a>
+                            <a class="dropdown-item" href="/games/random">Random Game</a>
 
                             <div class="dropdown-divider"></div>
 
