--- a/cmd/webserver/templates/apps.gohtml
+++ b/cmd/webserver/templates/apps.gohtml
@@ -23,11 +23,11 @@
                 </div>
                 <div class="col-12">
                     <small id="presets">
-                        <a href="/apps?types=game&price=0.00&price=0.00">Free Games</a>,
-                        <a href="/apps?platforms=linux">Linux Games</a>,
-                        <a href="/apps?developers=3589">Valve Games</a>,
-                        <a href="/apps?tags=5153">Kickstarted Games</a>,
-                        <a href="/apps?types=music">Soundtracks</a>
+                        <a href="/games?types=game&price=0.00&price=0.00">Free Games</a>,
+                        <a href="/games?platforms=linux">Linux Games</a>,
+                        <a href="/games?developers=3589">Valve Games</a>,
+                        <a href="/games?tags=5153">Kickstarted Games</a>,
+                        <a href="/games?types=music">Soundtracks</a>
                     </small>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                 </div>
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped table-counts mb-0" data-path="/apps/apps.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-path="/games/games.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col" class="thin">#</th>
