--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="col-12 col-sm-6 col-lg-4" href="/apps">
+                    <a class="col-12 col-sm-6 col-lg-4" href="/games">
                         <div class="card mb-4">
                             <h5 class="card-header"><i class="fas fa-gamepad"></i> Game Ladders</h5>
                             <div class="card-body p-3">
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                     </a>
-                    <a class="col-12 col-sm-6 col-lg-4" href="/apps">
+                    <a class="col-12 col-sm-6 col-lg-4" href="/games">
                         <div class="card mb-4">
                             <h5 class="card-header"><i class="fas fa-gamepad"></i> Games Database</h5>
                             <div class="card-body p-3">
@@ -104,7 +104,7 @@
                             {{ end }}
                         </div>
                     </div>
-                    <a class="card-footer text-center" href="/apps">More</a>
+                    <a class="card-footer text-center" href="/games">More</a>
                 </div>
 
             </div>
