--- a/cmd/webserver/templates/players.gohtml
+++ b/cmd/webserver/templates/players.gohtml
@@ -24,7 +24,7 @@
                 <div class="col-12">
 
                     <p class="lead">{{ .Description }}</p>
-                    <small>See <a href="/apps">Games</a> for playtime ranks</small>
+                    <small>See <a href="/games">Games</a> for playtime ranks</small>
 
                 </div>
             </div>
