--- a/cmd/webserver/templates/coop.gohtml
+++ b/cmd/webserver/templates/coop.gohtml
@@ -74,7 +74,7 @@
                             </tr>
                             </thead>
                             {{ range $key, $value := .Games }}
-                                <tr data-link="/apps/{{ .Game.ID }}">
+                                <tr data-link="/games/{{ .Game.ID }}">
                                     <td class="img" data-app-id="{{ .Game.ID }}">
                                         <div class="icon-name">
                                             <div class="icon"><img src="{{.Game.GetIcon}}" alt="{{ .Game.GetName }}"></div>
