--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -537,7 +537,7 @@
                         <div class="jumbotron bottom mt-3">
                             <h1><i class="fas fa-info"></i></h1>
                             <div>
-                                {{/*Visit the <a href="/apps#wishlists">apps</a> page to see what apps are the most wished for.<br/>*/}}
+                                {{/*Visit the <a href="/games#wishlists">apps</a> page to see what apps are the most wished for.<br/>*/}}
                                 Reorder your wishlist on the <a href="https://store.steampowered.com/wishlist" target="_blank" rel="noopener">Steam Commity Page</a>.<br/>
                                 Ranks with a dash are newly added and unranked.
                             </div>
