--- a/cmd/webserver/templates/stats.gohtml
+++ b/cmd/webserver/templates/stats.gohtml
@@ -16,7 +16,7 @@
                 <h5>Steam Stats</h5>
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-4 col-xl mb-4">
-                        <a href="/apps" role="button" class="btn btn-success btn-block mb-0">Total Apps<br/>{{ comma64 .AppsCount}}</a>
+                        <a href="/games" role="button" class="btn btn-success btn-block mb-0">Total Apps<br/>{{ comma64 .AppsCount}}</a>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 col-xl mb-4">
                         <a href="/packages" role="button" class="btn btn-success btn-block mb-0">Total Packages<br/>{{ comma64 .PackagesCount}}</a>
