--- a/cmd/webserver/templates/wishlists.gohtml
+++ b/cmd/webserver/templates/wishlists.gohtml
@@ -57,7 +57,7 @@
                     <div class="tab-pane show active" id="apps" role="tabpanel">
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts" data-path="/wishlists/apps.json">
+                            <table class="table table-hover table-striped table-counts" data-path="/wishlists/games.json">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">App</th>
