--- a/cmd/webserver/templates/admin.gohtml
+++ b/cmd/webserver/templates/admin.gohtml
@@ -115,6 +115,12 @@
                                 </div>
                             </div>
                             <div class="form-group row">
+                                <label class="col-sm-3 col-form-label" for="group-members">Group Members:</label>
+                                <div class="col-sm-3">
+                                    <input type="text" name="group-members" id="group-members" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group row">
                                 <label class="col-sm-3 col-form-label" for="test-id">Test messages:</label>
                                 <div class="col-sm-3">
                                     <input type="text" name="test-id" id="test-id" class="form-control">
