--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -142,12 +142,12 @@
                         <div class="dropdown-menu">
 
                             <a class="dropdown-item" href="/games">Games</a>
-                            <a class="dropdown-item" href="/upcoming">Upcoming</a>
-                            <a class="dropdown-item" href="/sales">On Sale</a>
-                            <a class="dropdown-item" href="/new-releases">New Releases</a>
+                            <a class="dropdown-item" href="/games/upcoming">Upcoming</a>
+                            <a class="dropdown-item" href="/games/sales">On Sale</a>
+                            <a class="dropdown-item" href="/games/new-releases">New Releases</a>
                             {{/*<a class="dropdown-item" href="/games/trending">Trending</a>*/}}
                             <a class="dropdown-item" href="/games/achievements">Most Achievements</a>
-                            <a class="dropdown-item" href="/wishlists">Most Wishlists</a>
+                            <a class="dropdown-item" href="/games/wishlists">Most Wishlists</a>
                             <a class="dropdown-item" href="/games/random">Random Game</a>
 
                             <div class="dropdown-divider"></div>
