--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -123,7 +123,7 @@
                             {{ end }}
                         </div>
                     </div>
-                    <a class="card-footer text-center" href="/new-releases">More</a>
+                    <a class="card-footer text-center" href="/games/new-releases">More</a>
                 </div>
 
             </div>
@@ -189,7 +189,7 @@
                                 </tbody>
                                 <tfoot>
                                 <tr>
-                                    <td colspan="4"><a href="/sales">More Sales</a></td>
+                                    <td colspan="4"><a href="/games/sales">More Sales</a></td>
                                 </tr>
                                 </tfoot>
                             </table>
