--- a/cmd/webserver/templates/wishlists.gohtml
+++ b/cmd/webserver/templates/wishlists.gohtml
@@ -57,7 +57,7 @@
                     <div class="tab-pane show active" id="apps" role="tabpanel">
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts" data-path="/wishlists/games.json">
+                            <table class="table table-hover table-striped table-counts" data-path="/games/wishlists/games.json">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">App</th>
@@ -81,7 +81,7 @@
                     {{/*                    <div class="tab-pane" id="tags" role="tabpanel">*/}}
 
                     {{/*                        <div class="table-responsive mb-0">*/}}
-                    {{/*                            <table class="table table-hover table-striped" data-path="/wishlists/tags.json">*/}}
+                    {{/*                            <table class="table table-hover table-striped" data-path="/games/wishlists/tags.json">*/}}
                     {{/*                                <thead class="thead-light">*/}}
                     {{/*                                <tr>*/}}
                     {{/*                                    <th scope="col" style="width: 50%;">Tag</th>*/}}
