Fix groups dropdown styles

--- a/cmd/webserver/assets/sass/_global.scss
+++ b/cmd/webserver/assets/sass/_global.scss
@@ -137,6 +137,16 @@ body.dark {
             background-color: #21262a;
             color: #e9ecef;
         }
+
+        .chosen-single {
+            background-color: #21262a;
+            color: #e9ecef;
+
+            div {
+                background-color: #21262a;
+                color: #e9ecef;
+            }
+        }
     }
 
     .chosen-container-multi {
